--- a/xmlexplore.ipynb
+++ b/xmlexplore.ipynb
@@ -64,11 +64,15 @@
      "collapsed": false,
      "input": [
       "for child in root:\n",
-      "        #print type(child)\n",
-      "    \t#print \"tag=\",child.tag, \" attrib=\",child.attrib\n",
-      "        for c in child:\n",
-      "            print type(c)\n",
-      "            print \"tag=\",c.tag, \" attrib=\",c.attrib, c.getchildren"
+      "        seq_dict = {}\n",
+      "        if child.tag == 'fixed_annotation':\n",
+      "            print \"tag=\",child.tag, \" attrib=\",child.attrib\n",
+      "            for c in child:\n",
+      "                #print type(c)\n",
+      "                print \"tag=\",c.tag, \" Attrib: \",c.attrib, \" Text: \", c.text[:60]\n",
+      "                if c.tag == 'sequence': seq = c.text # store the value of c.text as a dictionary tuple with the seq name as the key\n",
+      "        else: pass\n",
+      "        print seq[:10]"
      ],
      "language": "python",
      "metadata": {},
@@ -77,38 +81,26 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "<class 'xml.etree.ElementTree.Element'>\n",
-        "tag= id  attrib= {} <bound method Element.getchildren of <Element 'id' at 0xaa6276c>>\n",
-        "<class 'xml.etree.ElementTree.Element'>\n",
-        "tag= hgnc_id  attrib= {} <bound method Element.getchildren of <Element 'hgnc_id' at 0xaa6280c>>\n",
-        "<class 'xml.etree.ElementTree.Element'>\n",
-        "tag= sequence_source  attrib= {} <bound method Element.getchildren of <Element 'sequence_source' at 0xaa6286c>>\n",
-        "<class 'xml.etree.ElementTree.Element'>\n",
-        "tag= organism  attrib= {'taxon': '9606'} <bound method Element.getchildren of <Element 'organism' at 0xaa628ec>>\n",
-        "<class 'xml.etree.ElementTree.Element'>\n",
-        "tag= source  attrib= {} <bound method Element.getchildren of <Element 'source' at 0xaa629ac>>\n",
-        "<class 'xml.etree.ElementTree.Element'>\n",
-        "tag= source  attrib= {} <bound method Element.getchildren of <Element 'source' at 0xaa62c4c>>\n",
-        "<class 'xml.etree.ElementTree.Element'>\n",
-        "tag= mol_type  attrib= {} <bound method Element.getchildren of <Element 'mol_type' at 0xaa62e4c>>\n",
-        "<class 'xml.etree.ElementTree.Element'>\n",
-        "tag= creation_date  attrib= {} <bound method Element.getchildren of <Element 'creation_date' at 0xaa62e8c>>\n",
-        "<class 'xml.etree.ElementTree.Element'>\n",
-        "tag= sequence  attrib= {} <bound method Element.getchildren of <Element 'sequence' at 0xaa62f0c>>\n",
-        "<class 'xml.etree.ElementTree.Element'>\n",
-        "tag= transcript  attrib= {'name': 't1'} <bound method Element.getchildren of <Element 'transcript' at 0xaa62f6c>>\n",
-        "<class 'xml.etree.ElementTree.Element'>\n",
-        "tag= annotation_set  attrib= {} <bound method Element.getchildren of <Element 'annotation_set' at 0xaa7526c>>\n",
-        "<class 'xml.etree.ElementTree.Element'>\n",
-        "tag= annotation_set  attrib= {} <bound method Element.getchildren of <Element 'annotation_set' at 0xaa7760c>>\n",
-        "<class 'xml.etree.ElementTree.Element'>\n",
-        "tag= annotation_set  attrib= {} <bound method Element.getchildren of <Element 'annotation_set' at 0xab9daac>>\n",
-        "<class 'xml.etree.ElementTree.Element'>\n",
-        "tag= annotation_set  attrib= {} <bound method Element.getchildren of <Element 'annotation_set' at 0xacb578c>>\n"
+        "tag= fixed_annotation  attrib= {}\n",
+        "tag= id  Attrib:  {}  Text:  LRG_292\n",
+        "tag= hgnc_id  Attrib:  {}  Text:  1100\n",
+        "tag= sequence_source  Attrib:  {}  Text:  NG_005905.2\n",
+        "tag= organism  Attrib:  {'taxon': '9606'}  Text:  Homo sapiens\n",
+        "tag= source  Attrib:  {}  Text:  \n",
+        "      \n",
+        "tag= source  Attrib:  {}  Text:  \n",
+        "      \n",
+        "tag= mol_type  Attrib:  {}  Text:  dna\n",
+        "tag= creation_date  Attrib:  {}  Text:  2011-06-28\n",
+        "tag= sequence  Attrib:  {}  Text:  TGTGTGTATGAAGTTAACTTCAAAGCAAGCTTCCTGTGCTGAGGGGGTGGGAGGTAAGGG\n",
+        "tag= transcript  Attrib:  {'name': 't1'}  Text:  \n",
+        "      \n",
+        "TGTGTGTATG\n",
+        "TGTGTGTATG\n"
        ]
       }
      ],
-     "prompt_number": 37
+     "prompt_number": 53
     },
     {
      "cell_type": "code",
