Started exon function, tidied seq function

--- a/xmlexplore.ipynb
+++ b/xmlexplore.ipynb
@@ -16,7 +16,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -27,7 +27,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -38,7 +38,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 27
+     "prompt_number": 41
     },
     {
      "cell_type": "code",
@@ -57,40 +57,13 @@
        ]
       }
      ],
-     "prompt_number": 28
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def seq_retrieve(tree_at_root):\n",
-      "    '''Takes a tree parsed with xml.etree at the root node\n",
-      "    and returns a dictionary with tuples of sequence type and sequence'''\n",
-      "    seq_dict = {}\n",
-      "    for child in root.findall('fixed_annotation'):\n",
-      "        for grand in child.findall('sequence'): #Identify genomic sequence element\n",
-      "            # Add genomic sequence to seq_dict\n",
-      "            seq_dict['genomic'] = grand.text\n",
-      "            print 'gDNA length:', len(grand.text)\n",
-      "        for grand in child.findall('transcript'): #Identify transcript element\n",
-      "            for great in grand.findall('cdna'): #Identify cdna element\n",
-      "                #print great.tag\n",
-      "                #Addd cDNA sequence to seq_dict\n",
-      "                for greatggc in great.findall('sequence'):\n",
-      "                    seq_dict['cDNA'] = greatggc.text\n",
-      "                    print 'cDNA length:', len(greatggc.text)\n",
-      "            for great in grand.findall('coding_region'):\n",
-      "                for greatggc in great.findall('translation'):\n",
-      "                    for greatgggc in greatggc:\n",
-      "                        #Add protein sequence to seq_dict\n",
-      "                        if greatgggc.tag == 'sequence':\n",
-      "                            seq_dict['protein'] = greatgggc.text\n",
-      "                            print 'Protein length:', len(greatgggc.text)\n",
-      "    return seq_dict\n",
-      "            \n",
-      "                    \n",
-      "seq_dict = seq_retrieve(root)\n",
-      "print 'Length of seq_dict: ', len(seq_dict)"
+      "for e in root: print e.tag"
      ],
      "language": "python",
      "metadata": {},
@@ -99,20 +72,18 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "gDNA length: 193689\n",
-        "cDNA length: 7207\n",
-        "Protein length: 1863\n",
-        "Length of seq_dict:  3\n"
+        "fixed_annotation\n",
+        "updatable_annotation\n"
        ]
       }
      ],
-     "prompt_number": 54
+     "prompt_number": 42
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def seq_retrieve(tree_at_root):\n",
+      "def full_seq_retrieve(tree_at_root):\n",
       "    '''Takes a tree parsed with xml.etree at the root node\n",
       "    and returns a dictionary with tuples of sequence type and sequence'''\n",
       "    seq_dict = {}\n",
@@ -139,7 +110,7 @@
       "    return seq_dict\n",
       "            \n",
       "                    \n",
-      "seq_dict = seq_retrieve(root)\n",
+      "seq_dict = full_seq_retrieve(root)\n",
       "print 'Length of seq_dict: ', len(seq_dict)"
      ],
      "language": "python",
@@ -156,7 +127,40 @@
        ]
       }
      ],
-     "prompt_number": 61
+     "prompt_number": 20
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def exon_coord_retrieve(tree_at_root):\n",
+      "    '''Takes a tree parsed with xml.etree at the root node\n",
+      "    and returns a nested dictionary of exons and coordinates'''\n",
+      "    exon_dict_genomic = {}\n",
+      "    exon_dict_cdna = {}\n",
+      "    exon_dict_protein = {}\n",
+      "    l0 = tree_at_root\n",
+      "    for l1 in l0.findall('fixed_annotation'):\n",
+      "        for l2 in l1.findall('transcript'): #Identify transcript element\n",
+      "            for l3 in l2.find('exon'):\n",
+      "                pass\n",
+      "    return [exon_dict_genomic, exon_dict_cdna, exon_dict_protein]\n",
+      "            \n",
+      "exon_coord_retrieve(root)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "IndentationError",
+       "evalue": "expected an indented block (<ipython-input-48-1dc3b08368cb>, line 11)",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-48-1dc3b08368cb>\"\u001b[1;36m, line \u001b[1;32m11\u001b[0m\n\u001b[1;33m    return [exon_dict_genomic, exon_dict_cdna, exon_dict_protein]\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+       ]
+      }
+     ],
+     "prompt_number": 48
     },
     {
      "cell_type": "code",
